--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,19 +1,27 @@
-<!DOCTYPE html>
-<html>
- 
-<head>
-    <title></title>
-</head>
- 
-<body>
-    <form id="signin" name="signin" method="post" action="signin">
-        <label for="email">Email Address</label>
-        <input class="text" name="email" type="text" />
-        <label for="password">Password</label>
-        <input name="password" type="password" />
-        <input class="btn" type="submit" value="Sign In" />
-    </form>
- 
-</body>
- 
-</html>
+
+
+    <br>
+
+    <br>
+
+
+    <div class="container" id="loginBody">
+        <br>
+        <div class="container" id="logoReg">
+            Codex 
+        </div>
+    <br>
+
+    <br>
+        <div class="container" id="logForm">
+            <form id="signin" name="signin" method="post" action="signin">
+                <label for="email">Email Address</label>
+                <input class="text form-control" name="email" type="text" id="userEmail"/>
+                <label for="password">Password</label>
+                <input class="form-control" name="password" type="password" id="userPw"/>
+                <input class="btn btn-primary text-center" type="submit" value="Sign In" id="userLogin"/>
+            </form>
+        </div>
+
+        <br>
+    </div>
