--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,22 +1,36 @@
 /* index.handlebars styling */
 #navBar {
-   padding: 4px;   
+   padding: 0;
+   background-color: rgb(235, 235, 235);
+   height: 100vh;
 }
-hr {
-   border-color: black;
+
+.root-nav {
+   border-bottom: 2px solid black!important;
 }
+
+#root-content {
+   margin-top: 50px;
+}
+
 #recentSnips {
    border-style: solid;
    border-radius: 25px;
-   border-width: 2px;
-   border-color: black;
-   color: black;
+   border: 2px solid black;
    text-align: center;
    height: 300px;
-   width: 300px;
+   width: 100%;
 }
 #getStarted {
-   margin-left: 300px;
+   background: white;
+   border: 1px solid #2980b9;
+   color: #2980b9;
+}
+
+#getStarted:hover {
+   background: #2980b9;
+   border: 1px solid #2980b9;
+   color: white;
 }
 .icons {
    height: 30px;
@@ -24,34 +38,82 @@ hr {
 }
 /***********/
 /* registration.handlebars styling */
-/* form {
-   border-style: solid;
-   border-width: 2px;
-   border-color: black;
-   border-radius: 25px;
-   padding: 25px;
-} */
-#logo {
-   text-align: center;
+
+#regBody {
+   background-color: rgb(33,33,33);
+   color: white;
+   height: 100vh;
 }
+
+form {
+   border-style: solid;
+   background-color: white;
+   border-radius: 25px;
+   padding: 15px;
+}
+
+#logo-link {
+   color: white;
+   text-decoration: none;
+}
+
+#logoReg {
+   font-family: 'Faster One', cursive;
+   text-align: center;
+   letter-spacing: 20px;
+   font-size: 80pt;
+}
+
 #tutorial {
    text-align: center;
 }
+
 .icon {
    height: 40px;
    widows: 40px;
 }
+
+#userCreate {
+   margin-left: 46%;
+}
+
+#sign-up-button {
+   border: 1px solid #2980b9;
+   color: #2980b9;
+}
+
+#sign-up-button:hover {
+   background: #2980b9;
+   border: 1px solid #2980b9;
+   color: white;
+}
+
 /***********/
-/* Library.handlebars styling */
+
+/* login.handlebars styling */
+
+#loginBody {
+  margin-bottom: 0px;
+  background-color:  rgb(33,33,33);
+  color: white;
+  text-align: center;
+}
+
+#logForm {
+  height: 300px;
+  width: 300px;
+}
 
 /***********/
 /* dashboard.handlebars styling */
 body {
    overscroll-behavior: none;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
+   margin: 0;
+   padding: 0;
 }
 
-#login-button, #search-button {
+#login-button, #library-button, #library-button, #sign-in-button {
    background: none;
    color: white;
    border: 1px solid white;
@@ -59,14 +121,9 @@ body {
    transition: all 300ms;
 }
 
-#login-button:hover, #search-button:hover {
+#login-button:hover, #library-button:hover, #library-button:hover, #sign-in-button:hover {
    background: white;
    color: #2980b9;
-}
-
-#nav-separator {
-   color: white;
-   margin: 0 20px;
 }
 
 #search-bar {
@@ -80,7 +137,7 @@ body {
 }
 
 #codex-navbar {
-   height: 10%;
+   height: 10vh;
    border-bottom: 1px solid rgb(235, 235, 235);
    /* background: #3CA55C;
    background: -webkit-linear-gradient(to left, rgb(45, 159, 79), rgb(36, 128, 64));
@@ -105,7 +162,7 @@ body {
    padding: 0;
    cursor: pointer;
 
-   height: 90%;
+   height: 90vh;
    width: 30%;
    position: fixed;
    z-index: -1;
@@ -162,7 +219,7 @@ body {
    width: 100%;
    padding: 0;
 
-   height: 90%;
+   height: 90vh;
    width: 75%;
    position: fixed;
    z-index: -1;
