--- a/views/signin.handlebars
+++ b/views/signin.handlebars
@@ -1,11 +1,4 @@
-
-
-    <br>
-
-    <br>
-
-
-    <div class="container" id="loginBody">
+    <div class="container-fluid" id="loginBody">
         <br>
         <div class="container" id="logoReg">
             Codex 
@@ -15,11 +8,11 @@
     <br>
         <div class="container" id="logForm">
             <form id="signin" name="signin" method="post" action="signin">
-                <label for="email">Email Address</label>
-                <input class="text form-control" name="email" type="text" id="userEmail"/>
-                <label for="password">Password</label>
-                <input class="form-control" name="password" type="password" id="userPw"/>
-                <input class="btn btn-primary text-center" type="submit" value="Sign In" id="userLogin"/>
+                {{!-- <label for="email">Email Address</label> --}}
+                <input class="text form-control mt-3" name="email" type="text" id="userEmail" placeholder="Email" required/>
+                {{!-- <label for="password">Password</label> --}}
+                <input class="form-control mt-3" name="password" type="password" id="userPw" placeholder="Password" required/>
+                <input class="btn text-center mt-3" type="submit" value="Sign In" id="userLogin"/>
             </form>
         </div>
 
