--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,9 +17,9 @@
    border-style: solid;
    border-radius: 25px;
    border: 2px solid black;
-   text-align: center;
-   height: 300px;
+   overflow: auto;
    width: 100%;
+   max-height: 500px;
 }
 #getStarted {
    background: white;
@@ -45,7 +45,7 @@
    height: 100vh;
 }
 
-form {
+#signup, #signin {
    border-style: solid;
    background-color: white;
    border-radius: 25px;
@@ -66,6 +66,8 @@ form {
 
 #tutorial {
    text-align: center;
+   border: 2px solid black;
+   border-radius: 25px;
 }
 
 .icon {
@@ -77,15 +79,19 @@ form {
    margin-left: 46%;
 }
 
-#sign-up-button {
+#sign-up-button, #userLogin {
    border: 1px solid #2980b9;
    color: #2980b9;
 }
 
-#sign-up-button:hover {
+#sign-up-button:hover, #userLogin:hover {
    background: #2980b9;
    border: 1px solid #2980b9;
    color: white;
+}
+
+#message {
+   color: black;
 }
 
 /***********/
@@ -93,10 +99,12 @@ form {
 /* login.handlebars styling */
 
 #loginBody {
-  margin-bottom: 0px;
+  margin: 0;
   background-color:  rgb(33,33,33);
   color: white;
   text-align: center;
+  height: 100vh;
+  width: 100vw;
 }
 
 #logForm {
@@ -169,6 +177,14 @@ body {
    bottom: 0;
    left: 0;
    overflow-x: hidden;
+}
+
+#page-title {
+   font-weight: bold;
+   color: #40bff5;
+   padding: 10px 20px;
+   font-size: 20px;
+   border-bottom: 1px solid rgb(235, 235, 235);   
 }
 
 #new-snippet-button {
