--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -51,7 +51,7 @@
 
 
             <form id="signup" name="signup" method="post" action="/signup">
-                
+
                 <!-- <label for="email">Email Address</label> -->
                 <input class="text form-control mt-3" name="email" type="email" placeholder="Enter email" required/>
 
@@ -67,18 +67,16 @@
                 </div>
 
                 <!-- <label for="password">Password</label> -->
-                <input name="password" type="password" class="form-control mt-3" id="InputPassword1" placeholder="Password" required/>
-                <input name="confirmPassword" type="password" class="form-control mt-3" id="InputPassword2" placeholder="Confirm Password" required/>
-
+                <input name="password" type="password" class="form-control mt-3" id="InputPassword1" placeholder="Password" minlength="6" required/>
+                <input name="confirmPassword" type="password" class="form-control mt-3" id="InputPassword2" placeholder="Confirm Password" minlength="6" required/>
+                      
                 <input class="btn mt-3" type="submit" value="Sign Up" id="sign-up-button"/>
+
             </form>
-
-
-
 
         </div>
 
-        <div class="container mt-4" id="tutorial">
+        <div class="container mt-4 text-center">
             <div class="row">
                 <div class="col-sm">
                     <img src="./images/copy.png" class="icon">
