--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,11 +13,13 @@
       <div class="row">
 
          <div class="col-lg-6 col-md-12">
-            <div class="container card" id="tutorial">
-               <h3 class="mb-3 mt-3">
-                  How Codex Works
-               </h3>
-               <div class="row">
+            <div class="container card p-0" id="tutorial">
+               <div class="card-header mb-3">
+                  <h3>
+                     How Codex Works
+                  </h3>
+               </div>
+               <div class="row p-3">
                   <div class="col-sm">
                      <img src="images/copy.png" class="icons">
                   </div>
@@ -29,7 +31,7 @@
                      <img src="images/searchcloud.png" class="icons">
                   </div>
                </div>
-               <div class="row mb-3">
+               <div class="row mb-3 pl-3 pr-3 pb-3">
                   <div class="col-sm">
                      Copy and Paste your favorite code snippet
                   </div>
@@ -50,7 +52,11 @@
          {{!-- outline this div --}}
          <div class="col-lg-6 col-md-12">
             <div class="card" id="recentSnips">
-               <h3 class="text-center mt-3">Recent Snippets</h3>
+
+               <div class="card-header">
+                  <h3 class="text-center">Recent Snippets</h3>
+               </div>
+
                <div id="recent-snippets-display">
 
                   {{#each snippets}}
