--- a/public/css/style.css
+++ b/public/css/style.css
@@ -178,8 +178,6 @@ body {
    border-right: 1px solid rgb(235, 235, 235);
    color: white;
    padding: 0;
-   cursor: pointer;
-
    height: 90vh;
    width: 30%;
    position: fixed;
@@ -201,6 +199,7 @@ body {
    padding: 10px 20px;
    font-size: 20px;
    border-bottom: 1px solid rgb(235, 235, 235);
+   cursor: pointer;
    transition: color 300ms;
 }
 
@@ -210,6 +209,7 @@ body {
 
 .language-container {
    border-bottom: 1px solid rgb(235, 235, 235);
+   cursor: pointer;
 }
 
 .language {
@@ -221,6 +221,10 @@ body {
 
 .language:hover {
    color: #40bff5;
+}
+
+.dropdown {
+   padding: 10px 0;
 }
 
 .tag {
@@ -244,7 +248,6 @@ body {
    background-color: rgb(235, 235, 235);
    width: 100%;
    padding: 0;
-
    height: 90vh;
    width: 75%;
    position: fixed;
